<resources>
    <string name="app_name">Fitoozone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_text">FitooZone has workouts on demand that you\n can find based on how much time you have</string>
    <string name="wellcome_text">Wellcome \n to Fitoozone</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_account">Already have account?</string>
    <string name="workout_categories">Workout Categories</string>
    <string name="secound_screen_text">Workout categories will help you gain strength,\nget in better shape and embrace\na healthy lifestyle</string>
    <string name="start_training">Start Training</string>
    <string name="custom_workouts">Custom Workouts</string>
    <string name="screen_2_text">Create and save your own custom workouts.\nName your workouts, save them, and they’ll\nautomatically appear when you’re ready\nto workout</string>
    <string name="millions_of_users_choice">Millions of Users’ Choice</string>
    <string name="premium_fragment_text">We believe that our app should inspire you\nto be the best version of yourself</string>
    <string name="phone_email">Phone / Email</string>
    <string name="sing_in">Sing In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_continuing_you_accept_our_privacy_policy">By continuing you accept our Privacy Policy</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_verification">Phone verification</string>
    <string name="we_sent_a_code_to_your_number">We sent a code to your number</string>
    <string name="_9_173_605_76_05">9(173)605-76-05   </string>
    <string name="change">Change</string>
    <string name="resend">Resend</string>
    <string name="don_t_receive_your_code">Don\'t receive your code?</string>
    <string name="choose_gender">Choose gender</string>
    <string name="woman">Woman</string>
    <string name="gender_continue">Continue</string>
    <string name="step_1_of_8">Step 1 of 8</string>
    <string name="skip">Skip</string>
    <string name="choose_main_goal">Choose main goal</string>
    <string name="lose_weight">Lose weight</string>
    <string name="keep_fit">Keep fit</string>
    <string name="get_stronger">Get stronger</string>
    <string name="gain_muscle_mass">Gain muscle mass</string>
    <string name="start_training_goal">Start Training</string>
    <string name="step_2_of_8">step 2 of 8</string>
    <string name="step_3_of_8">step 3 of 8</string>
    <string name="select_height">Select height</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="kilogram">Kilogram</string>
    <string name="pound">Pound</string>
    <string name="select_weight">Select weight</string>
    <string name="step_4_of_8">step 4 of 8</string>
    <string name="kg">kg</string>
    <string name="choose_training_level">Choose training level</string>
    <string name="step_7_of_8">step 7 of 8</string>
    <string name="step_8_of_8">step 8 of 8</string>
    <string name="cardio">Cardio</string>
    <string name="power_training">Power training</string>
    <string name="stretch">Stretch</string>
    <string name="dancing">Dancing</string>
    <string name="yoga">Yoga</string>
    <string name="choose_activities_that_interest">Choose activities that interest</string>
    <string name="plan_text">We create a workout according\nto demographic profile, activity\nlevel and interests</string>
    <string name="hi_deborah">Hi, Deborah</string>
    <string name="category">Category</string>
    <string name="view_all">View All</string>
    <string name="gym">Gym</string>
    <string name="home">Home</string>
    <string name="trainings">Trainings</string>
    <string name="show_filter">Show Filter</string>
    <string name="filters">Filters</string>
    <string name="Resistance_training">Resistance training, also known as strength training, is an essential component of any fitness routine, especially for your upper body</string>
    <string name="personal_trainings">Personal Trainings</string>
    <string name="_2_workouts">2 workouts</string>
    <string name="_13_workouts">13 workouts</string>
    <string name="_16_workouts">16 workouts</string>
</resources>