<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".VerificationFragment">

    <TextView
        android:gravity="center"
        android:layout_marginTop="68dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/phone_verification"
        android:textColor="#0A0615"
        android:textSize="27sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_sent_a_code_to_your_number"
        android:fontFamily="@font/open_sans"
        android:textColor="#0B0616"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9_173_605_76_05"
            android:fontFamily="@font/open_sans"
            android:textColor="#0B0616"
            android:textSize="16sp"/>

        <TextView
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#461B93"
            android:textSize="15sp"/>


    </LinearLayout>




</LinearLayout>