<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".GoalFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back_arrow_24"/>

        <TextView
            android:layout_width="261dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:text="@string/step_2_of_8"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#461B93"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/open_sans"
            android:textColor="#404B52"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/choose_main_goal"
        android:textColor="#0A0615"
        android:textSize="27sp" />

    <LinearLayout
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_gender"
        android:padding="12dp">

        <ImageView
            android:padding="4dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/loss_weight_image"
            android:background="@drawable/gender_image_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/lose_weight"
            android:textColor="#0A0615"
            android:layout_marginStart="16dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_gender"
        android:padding="12dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="4dp"
            android:src="@drawable/keep_it_image"
            android:background="@drawable/gender_image_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/keep_fit"
            android:textColor="#0A0615"
            android:layout_marginStart="16dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_gender"
        android:padding="12dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="4dp"
            android:src="@drawable/get_stronger_image"
            android:background="@drawable/gender_image_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/get_stronger"
            android:textColor="#0A0615"
            android:layout_marginStart="16dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_gender"
        android:padding="12dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="4dp"
            android:src="@drawable/gain_muscle_image"
            android:background="@drawable/gender_image_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/gain_muscle_mass"
            android:textColor="#0A0615"
            android:layout_marginStart="16dp"
            android:textSize="16sp" />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/start_training_goal"
        android:layout_marginTop="90dp"
        android:textSize="17sp" />

</LinearLayout>