<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".BirthDateFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back_arrow_24"/>

        <TextView
            android:layout_width="261dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/step_3_of_8"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#461B93"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/open_sans"
            android:textColor="#404B52"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/select_birth_date"
        android:textColor="#0A0615"
        android:textSize="27sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        android:paddingStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edit_text_for_date"
        tools:ignore="Autofill,RtlSymmetry" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/gender_continue"
        android:layout_marginTop="400dp"
        android:textSize="17sp" />

</LinearLayout>