<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ActivitiesInterestFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back_arrow_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/step_8_of_8"
            android:textColor="#461B93"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="#404B52"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/choose_activities_that_interest"
        android:textColor="#0A0615"
        android:textSize="27sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_gender"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/gender_image_background"
            android:padding="4dp"
            android:src="@drawable/cardio_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/cardio"
            android:textColor="#0A0615"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_gender_gray"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/gender_image_background"
            android:src="@drawable/power_training_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/power_training"
            android:textColor="#0A0615"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_gender"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/gender_image_background"
            android:padding="6dp"
            android:src="@drawable/stretch_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/stretch"
            android:textColor="#0A0615"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_gender"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/gender_image_background"
            android:padding="6dp"
            android:src="@drawable/dancing_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dancing"
            android:textColor="#0A0615"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_gender_gray"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/gender_image_background"
            android:src="@drawable/yoga_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/yoga"
            android:textColor="#0A0615"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp" />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/gender_continue"
        android:textSize="17sp" />

</LinearLayout>