<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:paddingHorizontal="16dp"
    tools:context=".SignUpFragment">

    <TextView
        android:layout_marginTop="68dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="#0A0615"
        android:textSize="27sp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        android:paddingStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edit_text"
        android:hint="Full Name"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        android:paddingStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edit_text"
        android:hint="Email"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        android:paddingStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edit_text"
        android:hint="Phone"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        android:paddingStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edit_text"
        android:hint="Password"
        tools:ignore="Autofill,RtlSymmetry" />

    <RadioButton
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_continuing_you_accept_our_privacy_policy"
        android:fontFamily="@font/open_sans"
        android:textSize="12sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/start_training"
        android:textSize="17sp" />

    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Sign in with"
        android:textColor="#0A0615"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="108dp"
        android:layout_height="32dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_weight="1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_apple"/>

        <ImageView
            android:layout_weight="1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_facebook"/>

        <ImageView
            android:layout_weight="1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_google"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="52dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:fontFamily="@font/open_sans"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#461B93"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>