<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Onboarding2Fragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/wellcome_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="222dp"
        android:layout_height="174dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/image"
        app:layout_constraintBottom_toTopOf="@id/welcome_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view" />

    <LinearLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/wellcome_screen_shape"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/custom_workouts"
            android:textColor="@color/black"
            android:layout_marginTop="52dp"
            android:textSize="27sp" />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/screen_2_text"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:src="@drawable/circle_white" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:src="@drawable/circle_violet" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:src="@drawable/circle_white" />


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/start_training"
            android:background="@drawable/button_shape"
            android:textSize="17sp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>